--- a/index.html
+++ b/index.html
@@ -23,5 +23,35 @@
         <li><button type="button">Icon</button></li>
       </ul>
     </header>
+    <main>
+      <section>
+        <h1>Zack Snyder's Justice League</h1>
+        <ul>
+          <li>
+            <p>2021</p>
+          </li>
+          <li>
+            <p>18+</p>
+          </li>
+          <li>
+            <p>4h 2min</p>
+          </li>
+          <li>
+            <p>8.8 &#10027;</p>
+          </li>
+        </ul>
+        <p>
+          Determined to ensure Superman's ultimate sacrifice was not in vain,
+          Bruce Wayne aligns forces with Diana Prince with plans to recruit a
+          team of metahumans to protect the world from an approaching threat of
+          catastrophic proportions.
+        </p>
+        <ul>
+          <li><button type="button">&#9658; Watch</button></li>
+          <li><button type="button">More information</button></li>
+        </ul>
+        <img src="./images/bghero.jpg" alt="heroes justice" />
+      </section>
+    </main>
   </body>
 </html>
