create-section-tv-show

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
         </ul>
         <img src="./images/bghero.jpg" alt="heroes justice" />
       </section>
+    <section>
+      <h2>Trending TV Shows</h2>
+      <ul>
+        <li><a href="#"><img src="./images/shows/1.jpg" alt="Tv Shows" width="206"></a></li>
+        <li><a href="#"><img src="./images/shows/2.jpg" alt="Tv Shows" width="206"></a></li>
+        <li><a href="#"><img src="./images/shows/3.jpg" alt="Tv Shows" width="206"></a></li>
+        <li><a href="#"><img src="./images/shows/4.jpg" alt="Tv Shows" width="206"></a></li>
+        <li><a href="#"><img src="./images/shows/5.jpg" alt="Tv Shows" width="206"></a></li>
+        <li><a href="#"><img src="./images/shows/6.jpg" alt="Tv Shows" width="206"></a></li>
+      </ul>
+    </section>
     </main>
   </body>
 </html>
