--- a/index.html
+++ b/index.html
@@ -52,17 +52,77 @@
         </ul>
         <img src="./images/bghero.jpg" alt="heroes justice" />
       </section>
-    <section>
-      <h2>Trending TV Shows</h2>
-      <ul>
-        <li><a href="#"><img src="./images/shows/1.jpg" alt="Tv Shows" width="206"></a></li>
-        <li><a href="#"><img src="./images/shows/2.jpg" alt="Tv Shows" width="206"></a></li>
-        <li><a href="#"><img src="./images/shows/3.jpg" alt="Tv Shows" width="206"></a></li>
-        <li><a href="#"><img src="./images/shows/4.jpg" alt="Tv Shows" width="206"></a></li>
-        <li><a href="#"><img src="./images/shows/5.jpg" alt="Tv Shows" width="206"></a></li>
-        <li><a href="#"><img src="./images/shows/6.jpg" alt="Tv Shows" width="206"></a></li>
-      </ul>
-    </section>
+      <section>
+        <h2>Trending TV Shows</h2>
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/1.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/2.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/3.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/4.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/5.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/6.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Trending Movies</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/movies/8.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/9.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/10.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/11.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/12.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/13.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+        </ul>
+        <button type="button">See more</button>
+      </section>
     </main>
   </body>
 </html>
