--- a/index.html
+++ b/index.html
@@ -1,107 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Justice League</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Justice League</title>
-</head>
-
-<body>
-  <header>
-    <a href=""><span>M</span> box</a>
-    <nav>
+  <body>
+    <header>
+      <a href=""><span>M</span> box</a>
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">TV Shows</a></li>
+          <li><a href="">Movies</a></li>
+          <li><a href="">Series</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">TV Shows</a></li>
-        <li><a href="">Movies</a></li>
-        <li><a href="">Series</a></li>
+        <li><button type="button">Icon</button></li>
+        <li><button type="button">Icon</button></li>
+        <li><button type="button">Icon</button></li>
       </ul>
-    </nav>
-    <ul>
-      <li><button type="button">Icon</button></li>
-      <li><button type="button">Icon</button></li>
-      <li><button type="button">Icon</button></li>
-    </ul>
-  </header>
-  <main>
-    <section>
-      <h1>Zack Snyder's Justice League</h1>
-      <ul>
-        <li>
-          <p>2021</p>
-        </li>
-        <li>
-          <p>18+</p>
-        </li>
-        <li>
-          <p>4h 2min</p>
-        </li>
-        <li>
-          <p>8.8 &#10027;</p>
-        </li>
-      </ul>
-      <p>
-        Determined to ensure Superman's ultimate sacrifice was not in vain,
-        Bruce Wayne aligns forces with Diana Prince with plans to recruit a
-        team of metahumans to protect the world from an approaching threat of
-        catastrophic proportions.
-      </p>
-      <ul>
-        <li><button type="button">&#9658; Watch</button></li>
-        <li><button type="button">More information</button></li>
-      </ul>
-      <img src="./images/bghero.jpg" alt="heroes justice" />
-    </section>
-    <section>
-      <h2>Trending TV Shows</h2>
-      <ul>
-        <li>
-          <a href="#"><img src="./images/shows/1.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/2.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/3.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/4.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/5.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/6.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Trending Movies</h2>
-      <ul>
-        <li>
-          <a href=""><img src="./images/movies/8.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/9.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/10.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/11.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/12.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/13.jpg" alt="Movies" width="206" /></a>
-        </li>
-      </ul>
-      <button type="button">See more!!!!!!</button>
-    </section>
-  </main>
-</body>
-
+    </header>
+    <main>
+      <section>
+        <h1>Zack Snyder's Justice League</h1>
+        <ul>
+          <li>
+            <p>2021</p>
+          </li>
+          <li>
+            <p>18+</p>
+          </li>
+          <li>
+            <p>4h 2min</p>
+          </li>
+          <li>
+            <p>8.8 &#10027;</p>
+          </li>
+        </ul>
+        <p>
+          Determined to ensure Superman's ultimate sacrifice was not in vain,
+          Bruce Wayne aligns forces with Diana Prince with plans to recruit a
+          team of metahumans to protect the world from an approaching threat of
+          catastrophic proportions.
+        </p>
+        <ul>
+          <li><button type="button">&#9658; Watch</button></li>
+          <li><button type="button">More information</button></li>
+        </ul>
+        <img src="./images/bghero.jpg" alt="heroes justice" />
+      </section>
+      <section>
+        <h2>Trending TV Shows</h2>
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/1.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/2.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/3.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/4.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/5.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/6.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Trending Movies</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/movies/8.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/9.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/10.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/11.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/12.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/13.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+        </ul>
+        <button type="button">See more!!!!!!</button>
+      </section>
+      <section>
+        <h2>Popular Actors & Directors</h2>
+        <ul style="background-color: #3a8bb7">
+          <li>
+            <img
+              src="./images/actors/samantha-bowen.png"
+              alt="Samantha Bowen"
+              width="190"
+              height="190"
+            />
+            <h3>Samantha Bowen</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/rhys-birch.png"
+              alt="Rhys Birch"
+              width="190"
+              height="190"
+            />
+            <h3>Rhys Birch</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/james-holloway.png"
+              alt="James Holloway"
+              width="190"
+              height="190"
+            />
+            <h3>James Holloway</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/joshua-walton.png"
+              alt="Joshua Walton"
+              width="190"
+              height="190"
+            />
+            <h3>Joshua Walton</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/patrick-elliott.png"
+              alt="Patrick Elliott"
+              width="190"
+              height="190"
+            />
+            <h3>Patrick Elliott</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/morgan-o'neill.png"
+              alt="Morgan O'Neill"
+              width="190"
+              height="190"
+            />
+            <h3>Morgan O'Neill</h3>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
