--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
       <section>
         <h2>Popular Actors & Directors</h2>
-        <ul style="background-color: #3a8bb7">
+        <ul style="background-color: #4e85a3">
           <li>
             <img
               src="./images/actors/samantha-bowen.png"
