--- a/index.html
+++ b/index.html
@@ -236,6 +236,52 @@
           </li>
         </ul>
       </section>
-    </main>
+      <Section>
+        <a href="#" class="protects"></a>
+        <h2 hidden>future projects</h2>
+        <div>
+          <img src="./images/projects/Big.Buck.Bunny.-.Opening 1.jpg" alt="Big.Buck" width="739px">
+        </div>
+        <div>
+          <img src="./images/projects/2021 2.jpg" alt="production date" width="294px">
+          <img src="./images/projects/Rectangle 33.jpg" alt="background" width="1440px">
+        </div>
+        <div>
+          <img src="./images/projects/Rectangle 36.jpg" alt="background next block" width="3397px">
+        </div>
+      </main>
+      <footer>
+        <a href=""><span>M</span> box</a>
+        <div  width: 194px; height: 140px;>
+        <ul>
+          <li><a href="">Voice over and Subtitle</a></li>
+          <li><a href="">Media Center</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Contact us</a></li>
+        </ul>
+        </div>
+        <div width: 152px; height: 100px;>
+          <ul>
+          <li><a href="">Voice Description</a></li>
+          <li><a href="">Investor Relations</a></li>
+          <li><a href="">Legal Provisions</a></li>
+          </ul>
+        </div>
+        <div width: 170px; height: 100px;>
+          <ul>
+          <li><a href="">Help Center</a></li>
+          <li><a href="">Job Opportunities</a></li>
+          <li><a href="">Cookies Preferences</a></li>
+          </ul>
+          </div>
+          <div  width: 197px; height: 100px;>
+          <ul>
+          <li><a href="">Gift Cards</a></li>
+          <li><a href="">Terms of Use</a></li>
+          <li><a href="">Corporate Informations</a></li>
+          </ul>
+          </div>
+          
+      </footer>
   </body>
 </html>
