--- a/index.html
+++ b/index.html
@@ -120,49 +120,49 @@
       <ul class="flex" style="background-color: grey;">
         <li>
           <a href="">
-            <img src="./images/Genres/hearts1.svg" alt="Hearts" width="80"></img>
+            <img src="./images/genres/hearts1.svg" alt="Hearts" width="80">
             <h3>Romance</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/cinema1.svg" alt="Cinema" width="80">
+            <img src="./images/genres/cinema1.svg" alt="Cinema" width="80">
             <h3>Drama</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/documentary1.svg" alt="Documentary" width="80">
+            <img src="./images/genres/documentary1.svg" alt="Documentary" width="80">
             <h3>Historical</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/killer1.svg" alt="Killer" width="80">
+            <img src="./images/genres/killer1.svg" alt="Killer" width="80">
             <h3>Action</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/rocket1.svg" alt="Rocket" width="80">
+            <img src="./images/genres/rocket1.svg" alt="Rocket" width="80">
             <h3>Sci-fi</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/ghost1.svg" alt="Ghost" width="80">
+            <img src="./images/genres/ghost1.svg" alt="Ghost" width="80">
             <h3>Horror</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/smile1.svg" alt="Smile" width="80">
+            <img src="./images/genres/smile1.svg" alt="Smile" width="80">
             <h3>Comedy</h3>
           </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Genres/castle1.svg" alt="Castel" width="80">
+            <img src="./images/genres/castle1.svg" alt="Castel" width="80">
             <h3>Documentary</h3>
           </a>
         </li>
