--- a/index.html
+++ b/index.html
@@ -1,251 +1,339 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lemon&family=Marcellus&family=Mulish:wght@400;600;700;800&family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Justice League</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lemon&family=Marcellus&family=Mulish:wght@400;600;700;800&family=Poppins:wght@500&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Justice League</title>
-</head>
-
-<body>
-  <header class="flex">
-    <a class="logo-link link " href=""><span class="logo-m">M</span>box</a>
-    <nav>
-      <ul class="menu list flex">
-        <li><a class="link" href="">Home</a></li>
-        <li><a class="link" href="">TV Shows</a></li>
-        <li><a class="link" href="">Movies</a></li>
-        <li><a class="link" href="">Series</a></li>
+  <body>
+    <header class="flex">
+      <a class="logo-link link" href=""><span class="logo-m">M</span>box</a>
+      <nav>
+        <ul class="menu list flex">
+          <li><a class="link" href="">Home</a></li>
+          <li><a class="link" href="">TV Shows</a></li>
+          <li><a class="link" href="">Movies</a></li>
+          <li><a class="link" href="">Series</a></li>
+        </ul>
+      </nav>
+      <ul class="list flex">
+        <li><button type="button">Icon</button></li>
+        <li><button type="button">Icon</button></li>
+        <li><button type="button">Icon</button></li>
       </ul>
-    </nav>
-    <ul class="list flex">
-      <li><button type="button">Icon</button></li>
-      <li><button type="button">Icon</button></li>
-      <li><button type="button">Icon</button></li>
-    </ul>
-  </header>
-  <main>
-    <section class="hero flex">
-      <div class="hero-box">
-        <h1>Zack Snyder's <br> Justice League</h1>
+    </header>
+    <main>
+      <section class="hero flex">
+        <div class="hero-box">
+          <h1>
+            Zack Snyder's <br />
+            Justice League
+          </h1>
+          <ul class="flex list">
+            <li>
+              <p>2021</p>
+            </li>
+            <li>
+              <p>18+</p>
+            </li>
+            <li>
+              <p>4h 2min</p>
+            </li>
+            <li>
+              <p>8.8 &#10027;</p>
+            </li>
+          </ul>
+          <p>
+            Determined to ensure Superman's ultimate sacrifice was not in vain,
+            Bruce Wayne aligns forces with Diana Prince with plans to recruit a
+            team of metahumans to protect the world from an approaching threat
+            of catastrophic proportions.
+          </p>
+          <ul class="flex list">
+            <li><button type="button">&#9658; Watch</button></li>
+            <li><button type="button">More information</button></li>
+          </ul>
+        </div>
+
+        <img src="./images/bghero.jpg" alt="heroes justice" />
+      </section>
+      <!-- *******************   TV SHOVS -->
+      <section>
+        <h2>Trending TV Shows</h2>
         <ul class="flex list">
           <li>
-            <p>2021</p>
+            <a href="#"
+              ><img src="./images/shows/after.jpg" alt="Tv Shows" width="206"
+            /></a>
           </li>
           <li>
-            <p>18+</p>
+            <a href="#"
+              ><img
+                src="./images/shows/eemancipation.jpg"
+                alt="Tv Shows"
+                width="206"
+            /></a>
           </li>
           <li>
-            <p>4h 2min</p>
+            <a href="#"
+              ><img src="./images/shows/dunkirk.jpg" alt="Tv Shows" width="206"
+            /></a>
           </li>
           <li>
-            <p>8.8 &#10027;</p>
+            <a href="#"
+              ><img src="./images/shows/life.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/vanitas.jpg" alt="Tv Shows" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/shows/perfect.jpg" alt="Tv Shows" width="206"
+            /></a>
           </li>
         </ul>
-        <p>
-          Determined to ensure Superman's ultimate sacrifice was not in vain,
-          Bruce Wayne aligns forces with Diana Prince with plans to recruit a
-          team of metahumans to protect the world from an approaching threat of
-          catastrophic proportions.
-        </p>
+      </section>
+      <!--************************ MOOVIES-->
+      <section>
+        <h2>Trending Movies</h2>
         <ul class="flex list">
-          <li><button type="button">&#9658; Watch</button></li>
-          <li><button type="button">More information</button></li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/maturing.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/leapyear.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/island.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/legal.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/movies/interlock.jpg"
+                alt="Movies"
+                width="206"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/movies/echo.jpg" alt="Movies" width="206"
+            /></a>
+          </li>
+        </ul>
+        <button type="button">See more!!!!!!</button>
+      </section>
+
+      <!-- ******************* GENRES -->
+      <section>
+        <h2>Popular Genres</h2>
+        <ul class="flex" style="background-color: grey">
+          <li>
+            <a href="">
+              <img src="./images/genres/hearts1.svg" alt="Hearts" width="80" />
+              <h3>Romance</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/cinema1.svg" alt="Cinema" width="80" />
+              <h3>Drama</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/genres/documentary1.svg"
+                alt="Documentary"
+                width="80"
+              />
+              <h3>Historical</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/killer1.svg" alt="Killer" width="80" />
+              <h3>Action</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/rocket1.svg" alt="Rocket" width="80" />
+              <h3>Sci-fi</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/ghost1.svg" alt="Ghost" width="80" />
+              <h3>Horror</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/smile1.svg" alt="Smile" width="80" />
+              <h3>Comedy</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/genres/castle1.svg" alt="Castel" width="80" />
+              <h3>Documentary</h3>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <!-- *************** ACTORS -->
+      <section>
+        <h2 class="">Popular Actors & Directors</h2>
+        <ul class="flex" style="background-color: #4e85a3">
+          <li>
+            <img
+              src="./images/actors/samantha-bowen.png"
+              alt="Samantha Bowen"
+              width="190"
+              height="190"
+            />
+            <h3>Samantha Bowen</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/rhys-birch.png"
+              alt="Rhys Birch"
+              width="190"
+              height="190"
+            />
+            <h3>Rhys Birch</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/james-holloway.png"
+              alt="James Holloway"
+              width="190"
+              height="190"
+            />
+            <h3>James Holloway</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/joshua-walton.png"
+              alt="Joshua Walton"
+              width="190"
+              height="190"
+            />
+            <h3>Joshua Walton</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/patrick-elliott.png"
+              alt="Patrick Elliott"
+              width="190"
+              height="190"
+            />
+            <h3>Patrick Elliott</h3>
+          </li>
+          <li>
+            <img
+              src="./images/actors/morgan-o'neill.png"
+              alt="Morgan O'Neill"
+              width="190"
+              height="190"
+            />
+            <h3>Morgan O'Neill</h3>
+          </li>
+        </ul>
+      </section>
+      <!--******************** FUTURE -->
+      <section>
+        <h2 hidden>future projects</h2>
+        <div>
+          <img
+            src="./images/projects/Big.Buck.Bunny.jpg"
+            alt="Big.Buck"
+            width="739"
+          />
+        </div>
+        <div>
+          <img
+            src="./images/projects/2021.jpg"
+            alt="production date"
+            width="294"
+          />
+          <img
+            src="./images/projects/Rectangle33.jpg"
+            alt="background"
+            width="1440"
+          />
+        </div>
+        <div>
+          <img
+            src="./images/projects/Rectangle36.jpg"
+            alt="background next block"
+            width="3397"
+          />
+        </div>
+      </section>
+    </main>
+    <footer class="flex">
+      <a class="logo-link link" href=""><span class="logo-m">M</span>box</a>>
+
+      <div>
+        <ul class="list">
+          <li><a href="">Voice over and Subtitle</a></li>
+          <li><a href="">Media Center</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Contact us</a></li>
         </ul>
       </div>
 
-      <img src="./images/bghero.jpg" alt="heroes justice" />
-    </section>
-    <!-- *******************   TV SHOVS -->
-    <section>
-      <h2>Trending TV Shows</h2>
-      <ul class="flex list">
-        <li>
-          <a href="#"><img src="./images/shows/after.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/eemancipation.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/dunkirk.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/life.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/vanitas.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-        <li>
-          <a href="#"><img src="./images/shows/perfect.jpg" alt="Tv Shows" width="206" /></a>
-        </li>
-      </ul>
-    </section>
-    <!--************************ MOOVIES-->
-    <section>
-      <h2>Trending Movies</h2>
-      <ul class="flex list">
-        <li>
-          <a href=""><img src="./images/movies/maturing.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/leapyear.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/island.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/legal.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/interlock.jpg" alt="Movies" width="206" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/movies/echo.jpg" alt="Movies" width="206" /></a>
-        </li>
-      </ul>
-      <button type="button">See more!!!!!!</button>
-    </section>
-
-    <!-- ******************* GENRES -->
-    <section>
-      <h2>Popular Genres</h2>
-      <ul class="flex" style="background-color: grey;">
-        <li>
-          <a href="">
-            <img src="./images/genres/hearts1.svg" alt="Hearts" width="80">
-            <h3>Romance</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/cinema1.svg" alt="Cinema" width="80">
-            <h3>Drama</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/documentary1.svg" alt="Documentary" width="80">
-            <h3>Historical</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/killer1.svg" alt="Killer" width="80">
-            <h3>Action</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/rocket1.svg" alt="Rocket" width="80">
-            <h3>Sci-fi</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/ghost1.svg" alt="Ghost" width="80">
-            <h3>Horror</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/smile1.svg" alt="Smile" width="80">
-            <h3>Comedy</h3>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/genres/castle1.svg" alt="Castel" width="80">
-            <h3>Documentary</h3>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <!-- *************** ACTORS -->
-    <section>
-      <h2 class="">Popular Actors & Directors</h2>
-      <ul class="flex" style="background-color: #4e85a3">
-        <li>
-          <img src="./images/actors/samantha-bowen.png" alt="Samantha Bowen" width="190" height="190" />
-          <h3>Samantha Bowen</h3>
-        </li>
-        <li>
-          <img src="./images/actors/rhys-birch.png" alt="Rhys Birch" width="190" height="190" />
-          <h3>Rhys Birch</h3>
-        </li>
-        <li>
-          <img src="./images/actors/james-holloway.png" alt="James Holloway" width="190" height="190" />
-          <h3>James Holloway</h3>
-        </li>
-        <li>
-          <img src="./images/actors/joshua-walton.png" alt="Joshua Walton" width="190" height="190" />
-          <h3>Joshua Walton</h3>
-        </li>
-        <li>
-          <img src="./images/actors/patrick-elliott.png" alt="Patrick Elliott" width="190" height="190" />
-          <h3>Patrick Elliott</h3>
-        </li>
-        <li>
-          <img src="./images/actors/morgan-o'neill.png" alt="Morgan O'Neill" width="190" height="190" />
-          <h3>Morgan O'Neill</h3>
-        </li>
-      </ul>
-    </section>
-    <!--******************** FUTURE -->
-    <Section>
-      <a href="#" class="protects"></a>
-      <h2 hidden>future projects</h2>
       <div>
-        <img src="./images/projects/Big.Buck.Bunny.-.Opening 1.jpg" alt="Big.Buck" width="739px">
+        <ul class="list">
+          <li><a href="">Voice Description</a></li>
+          <li><a href="">Investor Relations</a></li>
+          <li><a href="">Legal Provisions</a></li>
+        </ul>
       </div>
-      <div>
-        <img src="./images/projects/2021 2.jpg" alt="production date" width="294px">
-        <img src="./images/projects/Rectangle 33.jpg" alt="background" width="1440px">
-      </div>
-      <div>
-        <img src="./images/projects/Rectangle 36.jpg" alt="background next block" width="3397px">
-      </div>
-  </main>
-  <footer>
-    <a href=""><span>M</span> box</a>
-    <div width: 194px; height: 140px;>
-      <ul>
-        <li><a href="">Voice over and Subtitle</a></li>
-        <li><a href="">Media Center</a></li>
-        <li><a href="">Privacy</a></li>
-        <li><a href="">Contact us</a></li>
-      </ul>
-    </div>
-    <div width: 152px; height: 100px;>
-      <ul>
-        <li><a href="">Voice Description</a></li>
-        <li><a href="">Investor Relations</a></li>
-        <li><a href="">Legal Provisions</a></li>
-      </ul>
-    </div>
-    <div width: 170px; height: 100px;>
-      <ul>
-        <li><a href="">Help Center</a></li>
-        <li><a href="">Job Opportunities</a></li>
-        <li><a href="">Cookies Preferences</a></li>
-      </ul>
-    </div>
-    <div width: 197px; height: 100px;>
-      <ul>
-        <li><a href="">Gift Cards</a></li>
-        <li><a href="">Terms of Use</a></li>
-        <li><a href="">Corporate Informations</a></li>
-      </ul>
-    </div>
 
-  </footer>
-</body>
+      <div>
+        <ul class="list">
+          <li><a href="">Help Center</a></li>
+          <li><a href="">Job Opportunities</a></li>
+          <li><a href="">Cookies Preferences</a></li>
+        </ul>
+      </div>
 
+      <div>
+        <ul class="list">
+          <li><a href="">Gift Cards</a></li>
+          <li><a href="">Terms of Use</a></li>
+          <li><a href="">Corporate Informations</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
