--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
   </head>
 
   <body>
-    <header class="flex">
-      <a class="logo-link link" href=""><span class="logo-m">M</span>box</a>
+    <header>
+      <div class="container flex header-box">
+      <a class="logo-link flex link" href=""><span class="logo-m flex">M</span>box</a>
       <nav>
         <ul class="menu list flex">
-          <li><a class="link" href="">Home</a></li>
-          <li><a class="link" href="">TV Shows</a></li>
-          <li><a class="link" href="">Movies</a></li>
-          <li><a class="link" href="">Series</a></li>
+          <li><a class="menu-item link" href="">Home</a></li>
+          <li><a class="menu-item link" href="">TV Shows</a></li>
+          <li><a class="menu-item link" href="">Movies</a></li>
+          <li><a class="menu-item link" href="">Series</a></li>
         </ul>
       </nav>
-      <ul class="list flex">
+      <ul class="head-icons list flex">
         <li><button type="button">Icon</button></li>
         <li><button type="button">Icon</button></li>
         <li><button type="button">Icon</button></li>
       </ul>
+      </div>
     </header>
     <main>
       <section class="hero flex">
